--- a/PatientNode/package.json
+++ b/PatientNode/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/stack": "^7.2.3",
     "react": "19.0.0",
     "react-native": "0.78.1",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "@react-native-community/geolocation": "^3.4.0",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "^1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
