--- a/PatientNode/package.json
+++ b/PatientNode/package.json
@@ -17,7 +17,9 @@
     "react-native": "0.78.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-get-location": "^5.0.0",
     "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0"
   },
