--- a/PatientNode/package.json
+++ b/PatientNode/package.json
@@ -23,6 +23,7 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-sensors": "^7.3.6",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
