--- a/PatientNode/package.json
+++ b/PatientNode/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/stack": "^7.2.3",
     "react": "19.0.0",
     "react-native": "0.78.1",
+    "react-native-background-actions": "^4.0.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-get-location": "^5.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-notifications": "^5.1.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-sensors": "^7.3.6",
