--- a/PatientGuardian/android/app/src/main/AndroidManifest.xml
+++ b/PatientGuardian/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
     <application
       android:name=".MainApplication"
@@ -10,6 +13,12 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <meta-data
+        android:name="com.google.android.gms.maps.MapView"
+        android:value="true" />
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyBENojg59fFBnDQ9VaE-LnGxoXO68xuTGE"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
