--- a/PatientGuardian/package.json
+++ b/PatientGuardian/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PatientGuardian",
+  "name": "patientguardian",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/stack": "^7.2.9",
     "react": "19.0.0",
-    "react-native": "0.78.1"
+    "react-native": "0.78.1",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-get-location": "^5.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "^3.17.3",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-sensors": "^7.3.6",
+    "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
