--- a/PatientGuardian/package.json
+++ b/PatientGuardian/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.9",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-gesture-handler": "^2.25.0",
@@ -23,6 +25,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-sensors": "^7.3.6",
+    "react-native-sse": "^1.2.1",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0"
   },
