--- a/PatientGuardian/package.json
+++ b/PatientGuardian/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.9",
     "jwt-decode": "^4.0.0",
@@ -21,6 +22,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
